<resources>
    <string name="app_name">MoodTracker</string>
    <string name="image1">MoodTracker</string>
    <string name="image2">MoodTracker</string>
    <string name="image3">MoodTracker</string>
    <string name="image4">MoodTracker</string>
    <string name="image5">MoodTracker</string>
    <string name="historic1">MoodTracker</string>
    <string name="historic2">MoodTracker</string>
    <string name="historic3">MoodTracker</string>
    <string name="historic4">MoodTracker</string>
    <string name="historic5">MoodTracker</string>
    <string name="message1">MoodTracker</string>
    <string name="message2">MoodTracker</string>
    <string name="message3">MoodTracker</string>
    <string name="message4">MoodTracker</string>
    <string name="message5">MoodTracker</string>

</resources>
